# config_service

./: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  env.example  pyproject.toml
migrations/: 001_initial.sql
src/api/: handlers.py
src/config/: database.py  main.py  settings.py
src/models/: configuration.py
src/repositories/: configuration_repository.py
src/services/: configuration_service.py  template_service.py
src/utils/: migration_cli.py  migrations.py
src/validators/: api_validator.py  config_validator.py
